# nv

./: Cargo.toml  Readme.md  projects.json  techstack.md  techstack.yml
debian/: nv-0.1.0-1-x86_64.pkg.tar.zst  nv_0.1.0_amd64.deb  startify_0.1.0_amd64.deb
src/: app.rs  input.rs  lib.rs  main.rs  projects.rs  shell.rs
src/data/: data.json
